--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
+    "@supabase/supabase-js": "^2.87.1",
+    "crypto-js": "^4.2.0",
+    "jszip": "3.10.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "jszip": "3.10.1"
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
